--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,6 @@
     "ejs": "^2.5.7",
     "eslint": "^4.10.0",
     "express": "~4.15.5",
-    "jade": "^1.11.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.12.1",
     "serve-favicon": "~2.4.5"
