--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node ./core/www",
+    "dev": "nodemon ./core/www"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "eslint": "^4.10.0",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
+    "mssql": "^4.1.0",
     "nodemon": "^1.12.1",
     "serve-favicon": "~2.4.5"
   }
