--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "mssql": "^4.1.0",
+    "mysql": "^2.15.0",
     "nodemon": "^1.12.1",
     "serve-favicon": "~2.4.5"
   }
