--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "^4.10.0",
     "express": "^4.16.2",
+    "mysql": "^2.15.0",
     "nodemon": "^1.12.1"
   }
 }
