--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "author": "Daniel Kovalevich",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "eslint": "^4.10.0",
     "express": "^4.16.2",
     "mysql": "^2.15.0",
